# textalign

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
scripts/: align_short_demo.py  try_fuzzy.py
src/textalign/: __init__.py  aligner.py  alignment_pipeline.py  docsplit.py  sentences.py  translit.py  util.py
src/textalign.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_aligner.py  test_alignment_pipeline.py  test_docsplit.py  test_sentences.py  test_translit.py  test_util.py
tests/testdata/: simplicissimus_hist.h200.txt  simplicissimus_hist.txt  simplicissimus_norm.h200.txt  simplicissimus_norm.txt  test_01
